--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
                     <a href="recipe.html" id="recipeLink"><b>my fav recipe is here</b></a> — hope you like it!</p>
                 <div class="image-grid">
                     <div class="image-item">
-                        <img src="img/hobbies/IMG_8017.JPG" alt="Fun Fact Image 1">
+                        <img src="img/hobbies/IMG_8017.JPG" alt="Hobby Image 1">
                         <div class="overlay">Making sweets</div>
                     </div>
                     <div class="image-item">
-                        <img src="img/hobbies/IMG_8962.JPG" alt="Fun Fact Image 2">
+                        <img src="img/hobbies/IMG_8962.JPG" alt="Hobby Image 2">
                         <div class="overlay">Hiking</div>
                     </div>
                     <div class="image-item">
-                        <img src="img/hobbies/IMG_2769.JPG" alt="Fun Fact Image 3">
+                        <img src="img/hobbies/IMG_2769.JPG" alt="Hobby Image 3">
                         <div class="overlay">Running</div>
                     </div>
                 </div>
