--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section id="home">
                 <h1 class="hello">HELLO,</h1>
                 <p class="intro-text">
-                    I am Olena, a former social media manager from Ukraine, now living in London. 
+                    I am Olena, a former Social Media Manager from Ukraine, now living in London. 
                     I love coming up with creative ideas and exploring new opportunities.
                 </p>
                 <a href="#contact" class="contact-button">CONTACT ME</a>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="contact-item">
                         <span class="icon">📍</span>
-                        <p><strong>Find me in</strong><br>London</p>
+                        <p><strong>Find me</strong><br>London</p>
                     </div>
                 </div>
                 <form class="contact-form">
