--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <section id="hobby">
                 <h2><strong>Hobby</strong></h2>
                 <p>I enjoy running with my friends, hiking from time to time, and making gluten-free, sugar-free sweets! .. 
-                    <a href="recipe.html" id="recipeLink"><b>my fav recipe is here</b></a> — hope you like it!</p>
+                    <a href="recipe.html" id="recipeLink"><b>my favorite recipe is here</b></a> — hope you like it!</p>
                 <div class="image-grid">
                     <div class="image-item">
                         <img src="img/hobbies/IMG_8017.JPG" alt="Hobby Image 1">
