--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
                         <th style="color:white;">Position</th>
                         <th style="color:white;">Summary</th>
                     </tr>
+                     <tr>
+                         <td bgcolor="#fff">2023-2024</td>
+                         <td bgcolor="#fff">Crypto Trader Intern</td>
+                         <td bgcolor="#fff">
+                           <ul>
+                               <li>Analyzed market trends and supported the execution of crypto trades.</li>
+                                <li>Conducted research on emerging cryptocurrencies and blockchain technologies.</li>
+                                <li>Assisted in developing strategies for risk management and trade execution.</li>
+                            </ul>
+                        </td>
+                    </tr>
                     <tr>
                         <td bgcolor="#fff">2021-2022</td>
                         <td bgcolor="#fff">Social Media Manager</td>
